<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginRight="25dp"
    android:layout_marginLeft="25dp">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="50dp"
        android:text="@string/intro_login_titulo"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="18sp"
        android:text="@string/intro_opcao"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused" />

    <EditText
        android:id="@+id/txEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingLeft="15dp"

        android:textColor="@android:color/black"
        android:hint="@string/email"
        android:drawableStart="@drawable/ic_account_circle_azul_24dp"
        android:background="@drawable/form_redondo"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txSenhaLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:hint="@string/senha"
        android:paddingLeft="15dp"
        android:drawableStart="@drawable/ic_lock_outline_azul_24dp"
        android:background="@drawable/form_redondo"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnAcessar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/form_redondo"
        android:onClick="abrirFeed"
        android:paddingLeft="15dp"
        android:text="@string/botao_acessar"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/botao_cadastrar"
        android:textAlignment="center"
        android:textColor="@android:color/black"/>


</LinearLayout>