<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DetalhesEncotradoActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbDetalhes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightBlue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="@string/barDetalhes"
        app:titleTextColor="@android:color/white" />

    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carouselView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:fillColor="#FFFFFFFF"
        app:pageColor="#00000000"
        app:radius="6dp"
        app:slideInterval="3000"
        app:strokeColor="#FF777777"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/describItemTitulo"
        android:textAlignment="center"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txPerfilDescItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="5dp"
        android:text="@string/describItem"
        android:textAlignment="viewStart"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            android:text="@string/objData"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/txNomePessoaDetalhe"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:text="Nome da pessoa"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="+ Info" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@android:drawable/screen_background_light_transparent"
                app:srcCompat="@drawable/ic_info_azul_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:paddingRight="5dp"
                android:paddingBottom="2dp">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nItensEncontrados" />

                <TextView
                    android:id="@+id/txQtdItensEnc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="4" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="2dp"
            android:orientation="vertical"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dataEncontrados" />

                <TextView
                    android:id="@+id/txDiaEncotrados"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="12/02/2020" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Postado há:" />

                <TextView
                    android:id="@+id/txDiasPostagem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|end"
                    android:text="2" />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btLigar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/darkBlue"
                    android:drawableLeft="@drawable/ic_phone_branco_24dp"
                    android:layout_marginRight="2dp"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    android:text="@string/btLigar"
                    android:textColor="@color/common_google_signin_btn_text_dark_default" />

                <Button
                    android:id="@+id/btEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/darkBlue"
                    android:textColor="@android:color/white"
                    android:layout_weight="1"
                    android:layout_marginLeft="2dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:drawableLeft="@drawable/ic_email_branco_24dp"
                    android:text="@string/btEmail" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>